syntax = "proto3";

package order;

option go_package = "/orderpb";

message Order {
  int32 id = 1;
  int32 user_id = 2;
  string status = 3;
  repeated OrderItem items = 4;
}

message OrderItem {
  int32 product_id = 1;
  int32 quantity = 2;
}

message CreateOrderRequest {
  int32 user_id = 1;
  repeated OrderItem items = 2;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  int32 id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message UpdateOrderStatusRequest {
  int32 id = 1;
  string status = 2;
}

message UpdateOrderStatusResponse {
  bool success = 1;
}

message GetOrdersByUserRequest {
  int32 user_id = 1;
}

message GetOrdersByUserResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
  rpc GetOrdersByUser(GetOrdersByUserRequest) returns (GetOrdersByUserResponse);
}
